fixed mobile spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -184,18 +184,21 @@ p {
 
 @media(max-width: 500px) {
 
-    html, body, #root {
+    html, body {
         height: auto;
-        /* background: rgb(155, 200, 215); */
     }
-
+    
+    #root {
+        height: 100%;
+        background: rgba(255, 255, 255, 0.325);
+    }
     
     .previous-left-margin, .previous-right-margin, .current-left-margin, .current-right-margin, .next-left-margin, .next-right-margin {
         display: none
     }
     
     .content {
-        margin: 3rem 2rem 5rem;
+        margin: 0rem 2rem 5rem;
         background: transparent;
     }
 
